--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- importing icon documentation -->
+    <script src="https://kit.fontawesome.com/b48db17780.js" crossorigin="anonymous"></script>
   </body>
 </html>
